Fix spacing with columns in li tags in add_student.

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 
 li {
   font-size: 18px;
+  margin-bottom: 20px;
 }
 
 .navbar {
